--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -58,7 +58,28 @@ item:
       <attr>Max Range:</attr> %range% Blocks
       <red>Selected area can be formed only by one kind of block
       <red>OP only
+  fill-wand-1:
+    name: "<red>Fill Wand | <yellow>Level 1"
+    lore: |-
+      <gray>Left-click on block to set Location-1
+      <gray>Right-click on block to set Location-2
+      <gray>Shift+Right-click on block to set block to fill
+      <gray>Right-click on air to fill blocks
 
 guide:
   page:
     construction-wand: "Construction Wand"
+
+message:
+  common:
+    set-loc1: "Set Location-1: %loc%"
+    set-loc2: "Set Location-2: %loc%"
+    set-material: "Set Material: %material%"
+    not-set-loc1: "Location-1 is absent!"
+    not-set-loc2: "Location-2 is absent!"
+    not-set-material: "Material is absent!"
+    locations-in-different-worlds: "Locations are in different worlds!"
+    too-many-blocks: "Too many blocks!"
+    invalid-block: "Invalid block!"
+  fill-wand:
+    filled_blocks: "Filled %blocks% blocks"
