--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -59,12 +59,27 @@ item:
       <red>Selected area can be formed only by one kind of block
       <red>OP only
   fill-wand-1:
-    name: "<red>Fill Wand | <yellow>Level 1"
+    name: "<red>Fill Wand | <blue>Level 1"
     lore: |-
       <gray>Left-click on block to set Location-1
       <gray>Right-click on block to set Location-2
       <gray>Shift+Right-click on block to set block to fill
       <gray>Right-click on air to fill blocks
+  fill-wand-2:
+    name: "<red>Fill Wand | <gold>Level 2"
+    lore: |-
+      <gray>Left-click on block to set Location-1
+      <gray>Right-click on block to set Location-2
+      <gray>Shift+Right-click on block to set block to fill
+      <gray>Right-click on air to fill blocks
+  fill-wand-3:
+    name: "<red>Fill Wand | <yellow>Level 3"
+    lore: |-
+      <gray>Left-click on block to set Location-1
+      <gray>Right-click on block to set Location-2
+      <gray>Shift+Right-click on block to set block to fill
+      <gray>Right-click on air to fill blocks
+      <red>OP only
 
 guide:
   page:
@@ -81,5 +96,10 @@ message:
     locations-in-different-worlds: "Locations are in different worlds!"
     too-many-blocks: "Too many blocks!"
     invalid-block: "Invalid block!"
+    disabled-block: "Disabled block!"
+    no-enough-items: "No enough %material%!"
+    loc1: "Location-1: %loc%"
+    loc2: "Location-2: %loc%"
+    material: "Material: %material%"
   fill-wand:
-    filled_blocks: "Filled %blocks% blocks"
+    filled-blocks: "Filled %blocks% blocks"
