--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -87,8 +87,11 @@ guide:
 
 message:
   common:
+    # todo: add colors ↓
     set-loc1: "Set Location-1: %loc%"
     set-loc2: "Set Location-2: %loc%"
+    set-loc1-with-range: "Set Location-1: %loc% ( %total% Blocks )"
+    set-loc2-with-range: "Set Location-2: %loc% ( %total% Blocks )"
     set-material: "Set Material: %material%"
     not-set-loc1: "Location-1 is absent!"
     not-set-loc2: "Location-2 is absent!"
