--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -61,24 +61,24 @@ item:
   fill-wand-1:
     name: "<red>Fill Wand | <blue>Level 1"
     lore: |-
-      <gray>Left-click on block to set Location-1
-      <gray>Right-click on block to set Location-2
-      <gray>Shift+Right-click on block to set block to fill
-      <gray>Right-click on air to fill blocks
+      <green>Left-click on block to set Location-1
+      <green>Right-click on block to set Location-2
+      <green>Shift+Right-click on block to set block to fill
+      <green>Right-click on air to fill blocks
   fill-wand-2:
     name: "<red>Fill Wand | <gold>Level 2"
     lore: |-
-      <gray>Left-click on block to set Location-1
-      <gray>Right-click on block to set Location-2
-      <gray>Shift+Right-click on block to set block to fill
-      <gray>Right-click on air to fill blocks
+      <green>Left-click on block to set Location-1
+      <green>Right-click on block to set Location-2
+      <green>Shift+Right-click on block to set block to fill
+      <green>Right-click on air to fill blocks
   fill-wand-3:
     name: "<red>Fill Wand | <yellow>Level 3"
     lore: |-
-      <gray>Left-click on block to set Location-1
-      <gray>Right-click on block to set Location-2
-      <gray>Shift+Right-click on block to set block to fill
-      <gray>Right-click on air to fill blocks
+      <green>Left-click on block to set Location-1
+      <green>Right-click on block to set Location-2
+      <green>Shift+Right-click on block to set block to fill
+      <green>Right-click on air to fill blocks
       <red>OP only
 
 guide:
@@ -87,22 +87,21 @@ guide:
 
 message:
   common:
-    # todo: add colors ↓
-    set-loc1: "Set Location-1: %loc%"
-    set-loc2: "Set Location-2: %loc%"
-    set-loc1-with-range: "Set Location-1: %loc% ( %total% Blocks )"
-    set-loc2-with-range: "Set Location-2: %loc% ( %total% Blocks )"
-    set-material: "Set Material: %material%"
-    not-set-loc1: "Location-1 is absent!"
-    not-set-loc2: "Location-2 is absent!"
-    not-set-material: "Material is absent!"
-    locations-in-different-worlds: "Locations are in different worlds!"
-    too-many-blocks: "Too many blocks!"
-    invalid-block: "Invalid block!"
-    disabled-block: "Disabled block!"
-    no-enough-items: "No enough %material%!"
-    loc1: "Location-1: %loc%"
-    loc2: "Location-2: %loc%"
-    material: "Material: %material%"
+    set-loc1: "<green>Set Location-1: %loc%"
+    set-loc2: "<green>Set Location-2: %loc%"
+    set-loc1-with-range: "<green>Set Location-1: %loc% <gray>( <yellow>%total% Blocks <gray>)"
+    set-loc2-with-range: "<green>Set Location-2: %loc% <gray>( <yellow>%total% Blocks <gray>)"
+    set-material: "<green>Set Material: %material%"
+    not-set-loc1: "<red>Location-1 is absent!"
+    not-set-loc2: "<red>Location-2 is absent!"
+    not-set-material: "<red>Material is absent!"
+    locations-in-different-worlds: "<red>Locations are in different worlds!"
+    too-many-blocks: "<red>Too many blocks!"
+    invalid-block: "<red>Invalid block!"
+    disabled-block: "<red>Disabled block!"
+    no-enough-items: "<red>No enough %material%!"
+    loc1: "<attr>Location-1:</attr> %loc%"
+    loc2: "<attr>Location-2:</attr> %loc%"
+    material: "<attr>Material:</attr> %material%"
   fill-wand:
-    filled-blocks: "Filled %blocks% blocks"
+    filled-blocks: "<green>Filled %blocks% blocks"
