--- a/src/main/resources/lang/en_US.yml
+++ b/src/main/resources/lang/en_US.yml
@@ -5,75 +5,75 @@ item:
     name: "<green>Build Wand | <blue>Common"
     lore: |-
       <gray>Right-click to place blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <green>Selected area can be formed by any block
   building-wand-rare:
     name: "<green>Build Wand | <gold>Rare"
     lore: |-
       <gray>Right-click to place blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <green>Selected area can be formed by any block
   building-wand-epic:
     name: "<green>Build Wand | <yellow>Epic"
     lore: |-
       <gray>Right-click to place blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <green>Selected area can be formed by any block
   building-wand-block-strict-common:
-    name: "<green>Build Wand | <blue>Common"
+    name: "<green>Build Wand | <red> Block Strict | <blue>Common"
     lore: |-
       <gray>Right-click to place blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <red>Selected area can be formed only by one kind of block
   building-wand-block-strict-rare:
-    name: "<green>Build Wand | <gold>Rare"
+    name: "<green>Build Wand | <red> Block Strict | <gold>Rare"
     lore: |-
       <gray>Right-click to place blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <red>Selected area can be formed only by one kind of block
   building-wand-block-strict-epic:
-    name: "<green>Build Wand | <yellow>Epic"
+    name: "<green>Build Wand | <red> Block Strict | <yellow>Epic"
     lore: |-
       <gray>Right-click to place blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <red>Selected area can be formed only by one kind of block
   building-wand-cheat:
-    name: "<green>Build Wand | <dark_red>Cheat"
+    name: "<green>Build Wand | <red> Block Strict | <dark_red>Cheat"
     lore: |-
       <gray>Right-click to place blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <green>Selected area can be formed by any block
       <red>OP only
   building-wand-block-strict-cheat:
     name: "<green>Build Wand | <dark_red>Cheat"
     lore: |-
       <gray>Right-click to place blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <red>Selected area can be formed only by one kind of block
       <red>OP only
   breaking-wand-common:
     name: "<red>Break Wand | <blue>Common"
     lore: |-
       <gray>Right-click to break blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <red>Selected area can be formed only by one kind of block
   breaking-wand-rare:
     name: "<red>Break Wand | <gold>Rare"
     lore: |-
       <gray>Right-click to break blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <red>Selected area can be formed only by one kind of block
   breaking-wand-epic:
     name: "<red>Break Wand | <yellow>Epic"
     lore: |-
       <gray>Right-click to break blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <red>Selected area can be formed only by one kind of block
   breaking-wand-cheat:
     name: "<red>Break Wand | <dark_red>Cheat"
     lore: |-
       <gray>Right-click to break blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <red>Selected area can be formed only by one kind of block
       <red>OP only
   fill-wand-common:
@@ -83,7 +83,7 @@ item:
       <green>Right-click on block to set end location
       <green>Shift+Right-click on block to set block to fill
       <green>Right-click on air to fill blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
   fill-wand-rare:
     name: "<red>Fill Wand | <gold>Rare"
     lore: |-
@@ -91,7 +91,7 @@ item:
       <green>Right-click on block to set end location
       <green>Shift+Right-click on block to set block to fill
       <green>Right-click on air to fill blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
   fill-wand-epic:
     name: "<red>Fill Wand | <yellow>Epic"
     lore: |-
@@ -99,7 +99,7 @@ item:
       <green>Right-click on block to set end location
       <green>Shift+Right-click on block to set block to fill
       <green>Right-click on air to fill blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
   fill-wand-cheat:
     name: "<red>Fill Wand | <dark_red>Cheat"
     lore: |-
@@ -107,7 +107,7 @@ item:
       <green>Right-click on block to set end location
       <green>Shift+Right-click on block to set block to fill
       <green>Right-click on air to fill blocks
-      <attr>Max Range:</attr> %range% Blocks
+      <attr>Max range:</attr> %range%
       <red>OP only
 
 guide:
